[package]
name = "wanikani"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
wana_kana = "4"
